hover fix, grammar, and sizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -34,9 +34,6 @@ a {
   color: #616161;
   text-decoration: inherit;
 }
-a:hover {
-  color: #616161;
-}
 
 body {
   margin: 0;
@@ -49,4 +46,10 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2.2em;
+  }
 }
